--- a/games.html
+++ b/games.html
@@ -11,8 +11,8 @@
        
         <nav>
             <ul>
-                <a href="http://127.0.0.1:5500/index.html">HOME</a>
-                <a href="http://127.0.0.1:5500/mobile.html">MOBILE</a>
+                <li><a href="http://127.0.0.1:5500/index.html">HOME</a></li>
+                <li><a href="http://127.0.0.1:5500/mobile.html">MOBILE</a></li>
             </ul>
         </nav>
     
