--- a/mobile.html
+++ b/mobile.html
@@ -12,8 +12,8 @@
        
         <nav>
             <ul>
-                <a href="http://127.0.0.1:5500/index.html">HOME</a>
-                <a href="http://127.0.0.1:5500/games.html">GAMES</a>
+                <li><a href="http://127.0.0.1:5500/index.html">HOME</a></li>
+                <li><a href="http://127.0.0.1:5500/games.html">GAMES</a></li>
             </ul>
         </nav>
     
